--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ minifb = "0.28.0"
 once_cell = "1.21.3"
 rand = "0.9.2"
 rayon = "1.11.0"
+
+[profile.release]
+opt-level = 3
+lto = "fat"
+codegen-units = 1
